--- a/style.css
+++ b/style.css
@@ -104,3 +104,90 @@ border-radius: 50%;
   font-weight: 400;
   font-size: 16px;
 }
+.profile .social-icons{
+  margin: 15px 0px 25px 0px;
+}
+
+.social-icons a{
+  position: relative;
+  height: 40px;
+  width: 40px;
+  margin: 0 5px;
+  display: inline-flex;
+  text-decoration: none;
+  border-radius: 50%;
+}
+
+.social-icons a:hover::before,
+.profile .icon:hover::before,
+.buttons button:hover::before{
+
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  border-radius: 50%;
+  background: #ecf0f3;
+
+
+  box-shadow: inset -3px -3px 7px #ffff,
+              inset 3px 3px 5px #ceced1
+
+}
+
+.buttons button:hover::before{
+  z-index: -1;
+  border-radius: 5px;
+}
+
+.social-icons a i{
+  position: relative;
+  z-index: 3;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  line-height: 40px;
+}
+
+.social-icons a.facebook i{
+  color: #4267B2;
+}
+.social-icons a.insta i{
+  color: #1DA1F2;
+}
+.social-icons a.twitter i{
+  color: #E1306C;
+}
+.social-icons a.yt i{
+  color: #ff0000;
+}
+
+.profile .buttons{
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.buttons button:first-child{
+  margin-right: 10px;
+}
+.buttons button:last-child{
+  margin-left: 10px;
+}
+
+.buttons button{
+  position: relative;
+  width: 100%;
+  border: none;
+  outline: none;
+  padding: 12px 0;
+  color: #31344b;
+  font-size: 15px;
+  font-weight: 500;
+  border-radius: 5px;
+  cursor: pointer;
+  z-index: 4;
+}
+
