--- a/style.css
+++ b/style.css
@@ -194,3 +194,12 @@ border-radius: 50%;
   z-index: 4;
 }
 
+.btn-back-to-top {
+  color: #ff0000;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  display: none;
+  z-index: 99;
+}
+
